# pico-dev

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.py  pyproject.toml
docker/: entrypoint.py
pico_dev/: cli.py
pico_dev/commands/: new.py
pico_dev/services/: access_point.py  constants.py  project.py  web_server.py
pico_dev/templates/access_point/: boot.py
pico_dev/templates/default/: Makefile
pico_dev/templates/web_server/: Makefile  main.py  package.json  tailwind.config.js
pico_dev/templates/web_server/lib/microdot/: __init__.py  websocket.py
pico_dev/templates/web_server/web/controller/: ContentController.py
pico_dev/templates/web_server/web/static/: index.html
pico_dev/templates/web_server/web/static/styles/: main.css
