[project]
name = "pico-dev"
version = "0.1.0"
description = "CLI to scaffold Pico projects"
authors = [{ name = "Guilherme Terra" }]
requires-python = ">=3.7"
dependencies = ["typer>=0.9"]

[project.scripts]
pico-dev = "pico_dev.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pico_dev*"]

[tool.setuptools.package-data]
pico_dev = ["templates/**"]
